# linuxApplicationDevelopment

03_TerminalProject/: Makefile  Show.c
04_Multifile/: fun.c  makefile  prog.c
05_Environmental/: CMakeLists.txt  Window.c
06_Debugging/: double_free.c
07_DebuggingTracing/: Makefile  unlink.c
08_TestingCoverage/: Makefile
08_TestingCoverage/src/: buf.c  buf.h
08_TestingCoverage/test/: tests.c  tests.ts
09_I18nL10n/: configure.ac  main.c  main.pot
10_Documenting/: Doxyfile.in  Makefile.am  configure.ac  main.c  main.man  ru.po
11_Toolkits/: Makefile  main.c
12_ScriptingText/: configure.ac  ru.po
13_PatchInstall/: configure.ac
